--- a/React_Initial/package.json
+++ b/React_Initial/package.json
@@ -12,8 +12,17 @@
   "author": "LouisLiu",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.21.0",
+    "html-webpack-plugin": "^2.22.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
+  },
+  "scripts": {
+  "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
   }
 }
