Test Flux Step by Step

--- a/Router/.eslintrc
+++ b/Router/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "class-methods-use-this": ["error", { "exceptMethods": ["render"] }],
   },
   "env" :{
     "browser": true,
