--- a/Router/package.json
+++ b/Router/package.json
@@ -5,10 +5,12 @@
   "main": "webpack.config.js",
   "dependencies": {
     "d3": "^3.5.14",
+    "events": "^1.1.1",
+    "flux": "^3.0.0",
+    "html-webpack-plugin": "^2.22.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
-    "html-webpack-plugin": "^2.22.0"
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
